--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "swagger-schema",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Swagger schema helpers",
   "dependencies": {
     "jjv": "0.3.4",
     "lodash": "*"
   },
-  "devDependencies": {},
-  "scripts": {},
+  "devDependencies": {
+    "jscs": "1.2.4",
+    "jshint": "2.4.4"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/jshint . && ./node_modules/.bin/jscs ."
+  },
   "main": "index",
   "repository": "https://github.com/silas/swagger-schema.git",
   "author": "Silas Sewell <silas@sewell.org>",
