Update jjv to 1.0.0

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.8.0",
   "description": "Swagger schema helpers",
   "dependencies": {
-    "jjv": "0.3.4",
-    "lodash": "*"
+    "jjv": "1.0.0",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "jscs": "1.2.4",
