--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "swagger-schema",
-  "version": "0.9.3",
+  "version": "0.10.1",
   "description": "Swagger schema helpers",
   "dependencies": {
     "jjv": "1.0.0",
+    "jjve": "0.1.0",
     "lodash": "^2.4.1"
   },
   "devDependencies": {
