--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "swagger-schema",
-  "version": "0.10.2",
+  "version": "0.11.0",
   "description": "Swagger schema helpers",
   "dependencies": {
     "jjv": "1.0.0",
     "jjve": "0.1.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "swagger-spec": "^0.1.0"
   },
   "devDependencies": {
     "jscs": "1.2.4",
